--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,8 @@
 /* Defaults are for screen less than 650px */
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   padding: 0;
@@ -43,12 +46,33 @@ a {
 
 header > img {
   display: none; /* hidden when width less than 650px */
-  width: 150px;
-  padding-right: 25%;
 }
 
 h1 {
   margin: 0;
+}
+
+.cta {
+  color: var(--about-bg);
+  text-transform: uppercase;
+  font-weight: bold;
+  background: var(--bg);
+  border-style: solid;
+  border-color: var(--about-bg);
+  border-width: medium;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  transition: all 0.4s ease 0s;
+}
+
+.cta:hover {
+  background: var(--about-bg);
+  color: var(--bg);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
 }
 
 li {
@@ -191,7 +215,9 @@ ul.footer-links li a {
 @media only screen and (min-width: 650px) {
   header > img {
     display: block;
-    width: 150px;
+    width: 200px;
+    margin-right: 10%;
+    border-radius: 5%;
   }
 }
 
