--- a/public/style.css
+++ b/public/style.css
@@ -99,6 +99,7 @@ main {
 
 .about-container {
   width: 100%;
+  min-height: 35vh;
   background: var(--blue);
   color: #fff;
   margin-top: 10%;
@@ -130,22 +131,35 @@ main {
   z-index: -1;
 }
 
-.about-container ul {
+.about-watermark {
+  position: absolute;
+  color: var(--about-text);
+  opacity: 0.5;
+  font-size: 30px;
+  transform: skewY(2deg);
+  left: 10%;
+  top: -10px;
+}
+
+.about-content {
+  z-index: 1;
   display: flex;
-  flex-direction: column; /*default for <650px width*/
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   transform: skewY(2deg);
 }
 
-.about-container ul li {
-  margin: 0em 4em; /*default for <650px width*/
-}
-
-.about-container ul li p {
-  padding: 0.5em;
-}
-
-.about-container img {
+.about-content img {
   width: 170px;
+  border-radius: 50%;
+}
+
+.about-content img:first-of-type {
+  display: none;
+}
+.about-content img:last-of-type {
+  display: block;
 }
 
 section {
@@ -216,20 +230,46 @@ ul.footer-links li a {
   header > img {
     display: block;
     width: 200px;
-    margin-right: 10%;
+    margin-right: 20%;
     border-radius: 5%;
+  }
+  main {
+    text-align: center;
+  }
+
+  .about-container {
+    min-height: 25vh;
+  }
+
+  .about-watermark {
+    font-size: 60px;
+    transform: skewY(2deg);
+    top: -10%;
+    bottom: 0;
+    left: 35%;
+    right: 0;
+    width: fit-content;
+    height: fit-content;
+  }
+  .about-content {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .about-content img:first-of-type {
+    display: block;
+    margin-left: 20%;
+  }
+  .about-content img:last-of-type {
+    display: none;
+  }
+  .about-text-container {
+    margin-left: 30%;
+    margin-right: 10%;
   }
 }
 
 @media only screen and (min-width: 970px) {
   /*When screen is less than 970*/
-  .about-container ul {
-    flex-direction: row;
-  }
-
-  .about-container ul li {
-    margin-bottom: 3em;
-  }
 }
 
 /*Themes*/
