--- a/public/projects.css
+++ b/public/projects.css
@@ -1,12 +1,11 @@
-/* Small reset */
 :root {
-  --picture-gutter: 24px;
-  --item-height: 260px;
+	--picture-gutter: 24px;
+	--item-height: 260px;
 }
 
 figure {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 /* section img {
@@ -14,170 +13,191 @@ figure {
   max-width: 100%;
 } */
 
-/*
-  Shuffle needs either relative or absolute positioning on the container
-  It will set it for you, but it'll cause another style recalculation and layout.
-  AKA worse performance - so just set it here
- */
 .shuffle-container {
-  position: relative;
-  overflow: hidden;
+	position: relative;
+	overflow: hidden;
 }
 
 .my-sizer-element {
-  position: absolute;
-  opacity: 0;
-  visibility: hidden;
+	position: absolute;
+	opacity: 0;
+	visibility: hidden;
 }
 
 .picture-item {
-  height: var(--item-height);
-  margin-top: var(--picture-gutter);
+	height: var(--item-height);
+	margin-top: var(--picture-gutter);
+}
+
+.outer-figure {
+	position: relative;
+	width: 100%;
+	z-index: 1;
+	height: 100%;
+	background-color: var(--accent);
+	border-radius: 10px;
+}
+
+.outer-figure .inner-figure {
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	box-sizing: border-box; /*adds border & padding to width & height of element */
+	height: 100%;
+	width: 100%;
+	background-color: var(--about-bg);
+	border-radius: 10px;
+	clip-path: circle(10% at 90% 15%);
+	transition: clip-path 0.5s ease-in-out;
+}
+
+.outer-figure .inner-figure:hover {
+	clip-path: circle(75%);
 }
 
 .color-block {
-  background-color: var(--accent);
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
+	background-color: var(--accent);
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
 }
 
 .picture-item:nth-child(even) .color-block {
-  background-color: var(--about-bg);
+	background-color: var(--about-bg);
 }
 
 .filter-label {
-  display: block;
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 4px;
-  color: #95a5a6;
+	display: block;
+	padding: 0;
+	margin-top: 0;
+	margin-bottom: 4px;
+	color: #95a5a6;
 }
 
 .filters-group {
-  padding: 0;
-  margin: 0 0 4px;
-  border: 0;
+	padding: 0;
+	margin: 0 0 4px;
+	border: 0;
 }
 
 @media screen and (min-width: 768px) {
-  .filters-group-wrap {
-    display: flex;
-    /* justify-content: center;
+	.filters-group-wrap {
+		display: flex;
+		/* justify-content: center;
     align-content: center; */
-  }
+	}
 }
 .btn-group:after,
 .btn-group:before {
-  content: "";
-  display: table;
+	content: "";
+	display: table;
 }
 
 .btn-group:after {
-  clear: both;
+	clear: both;
 }
 
 .btn-group .btn {
-  float: left;
-  border-radius: 0;
+	float: left;
+	border-radius: 0;
 }
 
 .btn-group .btn:first-child {
-  border-radius: 3px 0 0 3px;
+	border-radius: 3px 0 0 3px;
 }
 
 .btn-group .btn:not(:first-child) {
-  margin-left: -1px;
+	margin-left: -1px;
 }
 
 .btn-group .btn:last-child {
-  border-radius: 0 3px 3px 0;
+	border-radius: 0 3px 3px 0;
 }
 
 .btn-group label.btn input[type="radio"] {
-  position: absolute;
-  clip: rect(0, 0, 0, 0);
-  pointer-events: none;
+	position: absolute;
+	clip: rect(0, 0, 0, 0);
+	pointer-events: none;
 }
 
 .btn {
-  display: inline-block;
-  padding: 0.75em 0.8em;
-  text-align: center;
-  border-radius: 3px;
-  border: 1px solid #34495e;
-  color: #34495e;
-  font-size: 1rem;
-  background-color: rgba(52, 73, 94, 0);
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
-  cursor: pointer;
-  -webkit-appearance: none;
+	display: inline-block;
+	padding: 0.75em 0.8em;
+	text-align: center;
+	border-radius: 3px;
+	border: 1px solid #34495e;
+	color: #34495e;
+	font-size: 1rem;
+	background-color: rgba(52, 73, 94, 0);
+	-webkit-transition: 0.2s ease-out;
+	transition: 0.2s ease-out;
+	cursor: pointer;
+	-webkit-appearance: none;
 }
 
 @media (-moz-touch-enabled: 0), (pointer: fine) {
-  .btn:hover {
-    color: #fff;
-    text-decoration: none;
-    background-color: #34495e;
-  }
+	.btn:hover {
+		color: #fff;
+		text-decoration: none;
+		background-color: #34495e;
+	}
 }
 .btn:focus {
-  outline-width: 0;
-  box-shadow: 0 0 0 2px rgba(52, 73, 94, 0.4);
+	outline-width: 0;
+	box-shadow: 0 0 0 2px rgba(52, 73, 94, 0.4);
 }
 
 .btn.active,
 .btn:active {
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
-  color: #fff;
-  background-color: #34495e;
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+	color: #fff;
+	background-color: #34495e;
 }
 
 .btn:focus.active {
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 73, 94, 0.4);
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 73, 94, 0.4);
 }
 
 .btn:disabled {
-  cursor: not-allowed;
-  opacity: 0.7;
-  color: #34495e;
-  background-color: rgba(52, 73, 94, 0);
+	cursor: not-allowed;
+	opacity: 0.7;
+	color: #34495e;
+	background-color: rgba(52, 73, 94, 0);
 }
 
 .btn--primary {
-  color: #3498db;
-  border-color: #3498db;
-  background-color: rgba(52, 152, 219, 0);
+	color: #3498db;
+	border-color: #3498db;
+	background-color: rgba(52, 152, 219, 0);
 }
 
 @media (-moz-touch-enabled: 0), (pointer: fine) {
-  .btn--primary:hover {
-    background-color: #3498db;
-  }
+	.btn--primary:hover {
+		background-color: #3498db;
+	}
 }
 .btn--primary:focus {
-  box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.4);
+	box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.4);
 }
 
 .btn--primary.active,
 .btn--primary:active {
-  background-color: #3498db;
+	background-color: #3498db;
 }
 
 .btn--primary:focus.active {
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 152, 219, 0.4);
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 152, 219, 0.4);
 }
 
 .btn--primary:disabled {
-  color: #3498db;
-  background-color: rgba(52, 152, 219, 0);
+	color: #3498db;
+	background-color: rgba(52, 152, 219, 0);
 }
 
 @media screen and (max-width: 767px) {
-  .btn {
-    font-size: 0.875rem;
-  }
+	.btn {
+		font-size: 0.875rem;
+	}
 }
 
 /* .container:after,
@@ -191,45 +211,45 @@ figure {
 } */
 
 .row {
-  margin-left: auto;
-  margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .row:after,
 .row:before {
-  content: "";
-  display: table;
+	content: "";
+	display: table;
 }
 
 .row:after {
-  clear: both;
+	clear: both;
 }
 
 .row .row {
-  margin-left: -8px;
-  margin-right: -8px;
+	margin-left: -8px;
+	margin-right: -8px;
 }
 
 /* Ensure images take up the same space when they load */
 /* https://vestride.github.io/Shuffle/images */
 .aspect {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  overflow: hidden;
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 100%;
+	overflow: hidden;
 }
 
 .aspect__inner {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 .aspect--16x9 {
-  padding-bottom: 56.25%;
+	padding-bottom: 56.25%;
 }
 
 .col-1\@xs,
@@ -262,11 +282,11 @@ figure {
 .col-10\@md,
 .col-11\@md,
 .col-12\@md {
-  position: relative;
-  box-sizing: border-box;
-  min-height: 1px;
-  padding-left: 8px;
-  padding-right: 8px;
+	position: relative;
+	box-sizing: border-box;
+	min-height: 1px;
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 .col-1\@xs,
@@ -275,167 +295,167 @@ figure {
 .col-4\@xs,
 .col-5\@xs,
 .col-6\@xs {
-  float: left;
+	float: left;
 }
 
 .col-1\@xs {
-  width: 16.66667%;
+	width: 16.66667%;
 }
 
 .col-2\@xs {
-  width: 33.33333%;
+	width: 33.33333%;
 }
 
 .col-3\@xs {
-  width: 50%;
+	width: 50%;
 }
 
 .col-4\@xs {
-  width: 66.66667%;
+	width: 66.66667%;
 }
 
 .col-5\@xs {
-  width: 83.33333%;
+	width: 83.33333%;
 }
 
 .col-6\@xs {
-  width: 100%;
+	width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  .col-1\@sm,
-  .col-2\@sm,
-  .col-3\@sm,
-  .col-4\@sm,
-  .col-5\@sm,
-  .col-6\@sm,
-  .col-7\@sm,
-  .col-8\@sm,
-  .col-9\@sm,
-  .col-10\@sm,
-  .col-11\@sm,
-  .col-12\@sm {
-    float: left;
-  }
+	.col-1\@sm,
+	.col-2\@sm,
+	.col-3\@sm,
+	.col-4\@sm,
+	.col-5\@sm,
+	.col-6\@sm,
+	.col-7\@sm,
+	.col-8\@sm,
+	.col-9\@sm,
+	.col-10\@sm,
+	.col-11\@sm,
+	.col-12\@sm {
+		float: left;
+	}
 
-  .col-1\@sm {
-    width: 8.33333%;
-  }
+	.col-1\@sm {
+		width: 8.33333%;
+	}
 
-  .col-2\@sm {
-    width: 16.66667%;
-  }
+	.col-2\@sm {
+		width: 16.66667%;
+	}
 
-  .col-3\@sm {
-    width: 25%;
-  }
+	.col-3\@sm {
+		width: 25%;
+	}
 
-  .col-4\@sm {
-    width: 33.33333%;
-  }
+	.col-4\@sm {
+		width: 33.33333%;
+	}
 
-  .col-5\@sm {
-    width: 41.66667%;
-  }
+	.col-5\@sm {
+		width: 41.66667%;
+	}
 
-  .col-6\@sm {
-    width: 50%;
-  }
+	.col-6\@sm {
+		width: 50%;
+	}
 
-  .col-7\@sm {
-    width: 58.33333%;
-  }
+	.col-7\@sm {
+		width: 58.33333%;
+	}
 
-  .col-8\@sm {
-    width: 66.66667%;
-  }
+	.col-8\@sm {
+		width: 66.66667%;
+	}
 
-  .col-9\@sm {
-    width: 75%;
-  }
+	.col-9\@sm {
+		width: 75%;
+	}
 
-  .col-10\@sm {
-    width: 83.33333%;
-  }
+	.col-10\@sm {
+		width: 83.33333%;
+	}
 
-  .col-11\@sm {
-    width: 91.66667%;
-  }
+	.col-11\@sm {
+		width: 91.66667%;
+	}
 
-  .col-12\@sm {
-    width: 100%;
-  }
+	.col-12\@sm {
+		width: 100%;
+	}
 
-  .container {
-    padding-left: 7%;
-    padding-right: 7%;
-  }
+	.container {
+		padding-left: 7%;
+		padding-right: 7%;
+	}
 
-  .row {
-    max-width: 1200px;
-  }
+	.row {
+		max-width: 1200px;
+	}
 }
 @media screen and (min-width: 1024px) {
-  .col-1\@md,
-  .col-2\@md,
-  .col-3\@md,
-  .col-4\@md,
-  .col-5\@md,
-  .col-6\@md,
-  .col-7\@md,
-  .col-8\@md,
-  .col-9\@md,
-  .col-10\@md,
-  .col-11\@md,
-  .col-12\@md {
-    float: left;
-  }
+	.col-1\@md,
+	.col-2\@md,
+	.col-3\@md,
+	.col-4\@md,
+	.col-5\@md,
+	.col-6\@md,
+	.col-7\@md,
+	.col-8\@md,
+	.col-9\@md,
+	.col-10\@md,
+	.col-11\@md,
+	.col-12\@md {
+		float: left;
+	}
 
-  .col-1\@md {
-    width: 8.33333%;
-  }
+	.col-1\@md {
+		width: 8.33333%;
+	}
 
-  .col-2\@md {
-    width: 16.66667%;
-  }
+	.col-2\@md {
+		width: 16.66667%;
+	}
 
-  .col-3\@md {
-    width: 25%;
-  }
+	.col-3\@md {
+		width: 25%;
+	}
 
-  .col-4\@md {
-    width: 33.33333%;
-  }
+	.col-4\@md {
+		width: 33.33333%;
+	}
 
-  .col-5\@md {
-    width: 41.66667%;
-  }
+	.col-5\@md {
+		width: 41.66667%;
+	}
 
-  .col-6\@md {
-    width: 50%;
-  }
+	.col-6\@md {
+		width: 50%;
+	}
 
-  .col-7\@md {
-    width: 58.33333%;
-  }
+	.col-7\@md {
+		width: 58.33333%;
+	}
 
-  .col-8\@md {
-    width: 66.66667%;
-  }
+	.col-8\@md {
+		width: 66.66667%;
+	}
 
-  .col-9\@md {
-    width: 75%;
-  }
+	.col-9\@md {
+		width: 75%;
+	}
 
-  .col-10\@md {
-    width: 83.33333%;
-  }
+	.col-10\@md {
+		width: 83.33333%;
+	}
 
-  .col-11\@md {
-    width: 91.66667%;
-  }
+	.col-11\@md {
+		width: 91.66667%;
+	}
 
-  .col-12\@md {
-    width: 100%;
-  }
+	.col-12\@md {
+		width: 100%;
+	}
 }
