--- a/public/projects.css
+++ b/public/projects.css
@@ -76,38 +76,36 @@ figure {
 	border-radius: calc(var(--border-radius-value) - 2px);
 }
 
-.outer-figure .inner-figure {
+.outer-figure-content span {
+	font-weight: bold;
+	text-decoration: underline;
+	float: right;
+	padding-right: 1.5em;
+}
+
+.inner-figure {
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 2;
 	height: 100%;
 	width: 100%;
-	background-color: white;
+	background-color: var(--projects-bg);
+	opacity: 0;
 	border-radius: calc(var(--border-radius-value) - 2px);
 	box-sizing: border-box;
-	clip-path: circle(8% at 90% 20%);
+	clip-path: circle(20% at 95% 92%);
 	transition: all 0.5s ease-in-out;
 }
 
-.outer-figure .inner-figure:hover {
+.inner-figure:hover {
 	clip-path: circle(75%);
-	background-color: var(--projects-bg);
-}
-
-.inner-figure span {
-	position: absolute;
-	top: 16%;
-	right: 5.5%;
-	transition: all 0.5s ease-in-out;
-}
-
-.inner-figure:hover span {
-	color: var(--projects-bg);
+	opacity: 1;
 }
 
 .color-block {
 	background-color: var(--accent);
+
 	width: 100%;
 	height: 100%;
 	border-radius: 10px;
@@ -373,7 +371,7 @@ figure {
 	width: 100%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 650px) {
 	.col-1\@sm,
 	.col-2\@sm,
 	.col-3\@sm,
@@ -444,6 +442,9 @@ figure {
 
 	.row {
 		max-width: 1200px;
+	}
+	.inner-figure {
+		clip-path: circle(10% at 95% 92%);
 	}
 }
 @media screen and (min-width: 1024px) {
