--- a/public/projects.css
+++ b/public/projects.css
@@ -137,7 +137,7 @@ figure {
 }
 
 .picture-item:nth-child(even) .color-block {
-	background-color: var(--about-bg);
+	background-color: var(--primary-color);
 }
 
 .filter-label {
@@ -146,6 +146,7 @@ figure {
 	margin-top: 0;
 	margin-bottom: 4px;
 	color: #95a5a6;
+	text-align: left;
 }
 
 .filters-group {
@@ -157,8 +158,11 @@ figure {
 @media screen and (min-width: 768px) {
 	.filters-group-wrap {
 		display: flex;
-		/* justify-content: center;
-    align-content: center; */
+		justify-content: flex-end;
+		align-content: center;
+	}
+	.filter-label {
+		text-align: right;
 	}
 }
 .btn-group:after,
@@ -173,20 +177,20 @@ figure {
 
 .btn-group .btn {
 	float: left;
-	border-radius: 0;
+	border-radius: var(--border-radius-value);
 }
 
-.btn-group .btn:first-child {
+/* .btn-group .btn:first-child {
 	border-radius: 3px 0 0 3px;
-}
+} */
 
-.btn-group .btn:not(:first-child) {
+/* .btn-group .btn:not(:first-child) {
 	margin-left: -1px;
-}
+} */
 
-.btn-group .btn:last-child {
+/* .btn-group .btn:last-child {
 	border-radius: 0 3px 3px 0;
-}
+} */
 
 .btn-group label.btn input[type="radio"] {
 	position: absolute;
@@ -197,12 +201,14 @@ figure {
 .btn {
 	display: inline-block;
 	padding: 0.75em 0.8em;
+	margin: 0.2em;
+
 	text-align: center;
 	border-radius: 3px;
-	border: 1px solid #34495e;
-	color: #34495e;
+	border: 1px solid var(--primary-color);
+	color: var(--primary-color);
 	font-size: 1rem;
-	background-color: rgba(52, 73, 94, 0);
+	background-color: rgba(var(--primary-color), 0);
 	-webkit-transition: 0.2s ease-out;
 	transition: 0.2s ease-out;
 	cursor: pointer;
@@ -213,45 +219,45 @@ figure {
 	.btn:hover {
 		color: #fff;
 		text-decoration: none;
-		background-color: #34495e;
+		background-color: var(--primary-color);
 	}
 }
 .btn:focus {
 	outline-width: 0;
-	box-shadow: 0 0 0 2px rgba(52, 73, 94, 0.4);
+	box-shadow: 0 0 0 2px rgba(var(--primary-color), 0.4);
 }
 
 .btn.active,
 .btn:active {
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
 	color: #fff;
-	background-color: #34495e;
+	background-color: var(--primary-color);
 }
 
 .btn:focus.active {
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 73, 94, 0.4);
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(var(--primary-color), 0.4);
 }
 
 .btn:disabled {
 	cursor: not-allowed;
 	opacity: 0.7;
-	color: #34495e;
-	background-color: rgba(52, 73, 94, 0);
+	color: var(--primary-color);
+	background-color: rgba(var(--primary-color), 0);
 }
 
 .btn--primary {
-	color: #3498db;
-	border-color: #3498db;
-	background-color: rgba(52, 152, 219, 0);
+	color: var(--primary-color);
+	border-color: var(--primary-color);
+	background-color: rgba(var(--bg), 0);
 }
 
 @media (-moz-touch-enabled: 0), (pointer: fine) {
 	.btn--primary:hover {
-		background-color: #3498db;
+		background-color: var(--primary-color);
 	}
 }
 .btn--primary:focus {
-	box-shadow: 0 0 0 2px rgba(52, 152, 219, 0.4);
+	box-shadow: 0 0 0 2px rgba(var(--primary-color), 0.4);
 }
 
 .btn--primary.active,
@@ -260,12 +266,12 @@ figure {
 }
 
 .btn--primary:focus.active {
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(52, 152, 219, 0.4);
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 0 2px rgba(var(--primary-color), 0.4);
 }
 
 .btn--primary:disabled {
-	color: #3498db;
-	background-color: rgba(52, 152, 219, 0);
+	color: var(--primary-color);
+	background-color: rgba(var(--primary-color), 0);
 }
 
 @media screen and (max-width: 767px) {
