--- a/public/style.css
+++ b/public/style.css
@@ -221,23 +221,17 @@ ul.footer-links li {
 }
 
 ul.footer-links li a {
-	color: #9d9d9d;
 	font-size: 0.8em;
 }
 
 @media only screen and (min-width: 650px) {
 	header > img {
 		display: block;
-		width: 200px;
+		width: 700px;
 		margin-right: 20%;
-		border-radius: 5%;
 	}
 	main {
 		text-align: center;
-	}
-
-	.about-container {
-		min-height: 25vh;
 	}
 
 	.about-watermark {
@@ -274,7 +268,7 @@ ul.footer-links li a {
 
 :root {
 	--cultured: #f9f8f8;
-	--timberwolf: #cdd3ce;
+	--timberwolf: #ece9e9;
 	--charcoal: #373f51;
 	--black-chocolate: #0f1108;
 	--blue: #0084a5;
